fix: show faucet on mobile (close #253)

--- a/packages/app/src/styles/components/welcome-page.css
+++ b/packages/app/src/styles/components/welcome-page.css
@@ -8,7 +8,7 @@
     }
   }
   .welcomePage--content {
-    @apply relative m-8 grid place-items-center;
+    @apply relative m-8 grid place-items-center max-h-[100vh];
   }
   /*
     WelcomeSidebar
